--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -39,104 +39,54 @@
         </div>
     </aside>
 
-
-    <!--    <div class="library-filters alignwide" id="home-filters">-->
-    <!--        <nav class="library-filters-categories library-filters-prority-nav">-->
-    <!--            <ul style="display: inline-block">-->
-    <!--                <li>-->
-    <!--                    <a class="filter-button selected" href="/?category=all">All</a>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <a class="filter-button " href="https://library.wpcode.com?category=most-popular#home-filters">Most-->
-    <!--                        Popular</a>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <a class="filter-button " href="https://library.wpcode.com?category=admin#home-filters">Admin</a>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <a class="filter-button "-->
-    <!--                       href="https://library.wpcode.com?category=archive#home-filters">Archive</a>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <a class="filter-button " href="https://library.wpcode.com?category=login#home-filters">Login</a>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <a class="filter-button " href="https://library.wpcode.com?category=attachments#home-filters">Attachments</a>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <a class="filter-button "-->
-    <!--                       href="https://library.wpcode.com?category=widgets#home-filters">Widgets</a>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <a class="filter-button " href="https://library.wpcode.com?category=rss-feeds#home-filters">RSS-->
-    <!--                        Feeds</a>-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    <a class="filter-button "-->
-    <!--                       href="https://library.wpcode.com?category=disable#home-filters">Disable</a>-->
-    <!--                </li>-->
-    <!--            </ul>-->
-    <!--        </nav>-->
-    <!--        <div class="library-filters-dropdown">-->
-    <!--        </div>-->
-    <!--    </div>-->
     <div class="library-snippets-list alignwide">
+        {% for obj in object_list %}
         <div class="library-snippet-box">
             <h3>
-                <a title="Allow SVG Files Upload" href="#">api title</a>
+                <a title="Allow SVG Files Upload" href="#">{{obj.name}}</a>
             </h3>
             <div class="library-snippet-description">
-                <p>little description about the api</p>
+                <p>{{obj.description}}</p>
             </div>
             <div class="library-snippet-buttons">
                 <a class="is-style-outline has-icon-eye library-snippet-button"
                    href="#">View
                 </a>
-<!--                <a href="#"-->
-<!--                   class="is-style-green has-icon-use library-snippet-button">Edit-->
-<!--                </a>-->
             </div>
         </div>
-        <div class="library-snippet-box">
-            <h3>
-                <a title="Allow SVG Files Upload" href="#">api title</a>
-            </h3>
-            <div class="library-snippet-description">
-                <p>little description about the api</p>
-            </div>
-            <div class="library-snippet-buttons">
-                <a class="is-style-outline has-icon-eye library-snippet-button"
-                   href="#">View</a>
-            </div>
-        </div>
-        <div class="library-snippet-box">
-            <h3>
-                <a title="Allow SVG Files Upload" href="#">api title</a>
-            </h3>
-            <div class="library-snippet-description">
-                <p>little description about the api</p>
-            </div>
-            <div class="library-snippet-buttons">
-                <a class="is-style-outline has-icon-eye library-snippet-button"
-                   href="#">View</a>
-            </div>
-        </div>
+        {% endfor %}
     </div>
+    {% if is_paginated %}
     <div class="library-snippets-pagination alignwide">
-        <span aria-current="page" class="page-numbers current">1</span>
-        <a class="page-numbers" href="#">2</a>
-        <a class="page-numbers" href="#">3</a>
-        <span class="page-numbers dots">…</span>
-        <a class="page-numbers" href="#">67</a>
-        <a class="next page-numbers" href="#">
-            <svg focusable="false" class=" v-image v-arrow-right" aria-hidden="true" width="20" height="16"
-                 viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1.66666 7.99984H18.3333" stroke="#42464D" stroke-width="1.7" stroke-linecap="round"
-                      stroke-linejoin="round"></path>
-                <path d="M11.6667 1.33325L18.3333 7.99992L11.6667 14.6666" stroke="#42464D" stroke-width="1.7"
-                      stroke-linecap="round" stroke-linejoin="round"></path>
-            </svg>
-        </a></div>
+
+            {% if page_obj.has_previous %}
+                <a class="page-numbers" href="?page={{1}}">First</a>
+            {% endif %}
+        {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
+                <span aria-current="page" class="page-numbers current">{{num}}</span>
+            {% elif num > page_obj.number|add:"-2" and num < page_obj.number|add:"2" %}
+                <a class="page-numbers" href="?page={{num}}">{{num}}</a>
+            {% endif %}
+        {% endfor %}
+
+
+        {% if page_obj.has_next and page_obj.next_page_number < paginator.count %}
+
+            <span class="page-numbers dots">…</span>
+            <a class="page-numbers" href="?page={{paginator.count}}">{{paginator.count}}</a>
+            <a class="next page-numbers" href="?page={{page_obj.next_page_number}}">
+                <svg focusable="false" class=" v-image v-arrow-right" aria-hidden="true" width="20" height="16"
+                     viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1.66666 7.99984H18.3333" stroke="#42464D" stroke-width="1.7" stroke-linecap="round"
+                          stroke-linejoin="round"></path>
+                    <path d="M11.6667 1.33325L18.3333 7.99992L11.6667 14.6666" stroke="#42464D" stroke-width="1.7"
+                          stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+            </a>
+        {% endif %}
+    </div>
+    {% endif %}
 </main>
 {% endblock %}
 
