--- a/templates/home/dashboard/api/add-api.html
+++ b/templates/home/dashboard/api/add-api.html
@@ -5,12 +5,26 @@
 {% block body %}
 <main>
     <div class="container">
+        {% if form.errors %}
+        <div class="alert alert-danger" role="alert">
+            <strong>Error(s):</strong>
+            <ul>
+                {% for field, errors in form.errors.items %}
+                    {% for error in errors %}
+                    <sapn>{{field|capfirst}}</sapn>
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
         <div class="row justify-content-center">
             <div class="col-lg-7">
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Add API</h3></div>
                     <div class="card-body">
-                        <form>
+                        <form method="post">
+                            {% csrf_token %}
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
@@ -31,53 +45,76 @@
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
                                         <input class="form-control" id="inputName" type="text"
-                                               placeholder="Enter name"/>
+                                               placeholder="Enter name" name="name"/>
                                         <label for="inputName">Name</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
                                         <input class="form-control" id="inputUnique" type="text"
-                                               placeholder="Enter your last name"/>
+                                               placeholder="Enter your last name" name="unique_code" value="{{new_unique_code}}" readonly/>
                                         <label for="inputUnique">Unique Code</label>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="inputEmail" type="email"
-                                       placeholder="name@example.com"/>
-                                <label for="inputEmail">Email address</label>
+                                <input class="form-control" id="inputUrl" type="text"
+                                       placeholder="" name="api_url"/>
+                                <label for="inputUrl">API Url</label>
                             </div>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="inputCategory" type="password"
-                                               placeholder="Create a password"/>
-                                        <label for="inputCategory">Category</label>
+                                        <select class="form-control form-select" id="selectCategory" name="category">
+                                            <option>Select Category</option>
+                                            {% for category in category_list %}
+                                            <option value="{{category.id}}">{{category.category_name}}</option>
+                                            {% endfor %}
+                                        </select>
+                                        <label for="selectCategory">Category</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="inputApiType" type="password"
-                                               placeholder="Confirm password"/>
-                                        <label for="inputApiType">API Type</label>
+                                        <select class="form-control form-select" id="selectApiType" name="api_type">
+                                            <option>Select Type</option>
+                                            {% for v, l in type_list %}
+                                            <option value="{{v}}">{{l}}</option>
+                                            {% endfor %}
+                                        </select>
+                                        <label for="selectApiType">API Type</label>
                                     </div>
                                 </div>
                             </div>
+                            <div class="form-floating mb-3">
+                                <select class="form-control form-select" id="selectApp" name="app">
+                                    <option>Select app</option>
+                                    {% for app in app_list %}
+                                    <option value="{{app.id}}">{{app.app_name}}</option>
+                                    {% endfor %}
+                                </select>
+                                <label for="selectApp">App</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <textarea class="form-control" id="description"
+                                          placeholder="" style="min-height:100px" name="description">
+                                </textarea>
+                                <label for="description">Description</label>
+                            </div>
                             <div class="mt-4 mb-0">
                                 <div class="d-grid">
-                                    <a class="btn btn-primary btn-block" href="login.html">
+                                    <button class="btn btn-primary btn-block">
                                         Save API
-                                    </a>
+                                    </button>
                                 </div>
                             </div>
                         </form>
                     </div>
-<!--                    <div class="card-footer text-center py-3">-->
-<!--                        <div class="small">-->
-<!--                            <a href="login.html">Have an account? Go to login</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                    <!--                    <div class="card-footer text-center py-3">-->
+                    <!--                        <div class="small">-->
+                    <!--                            <a href="login.html">Have an account? Go to login</a>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
                 </div>
             </div>
         </div>
