--- a/templates/home/dashboard/api/api-list.html
+++ b/templates/home/dashboard/api/api-list.html
@@ -6,7 +6,7 @@
     <h1 class="mt-4">All API</h1>
     <ol class="breadcrumb mb-4">
         <li class="breadcrumb-item"><a href="{% url 'home_page:dashboard' %}">Dashboard</a></li>
-        <li class="breadcrumb-item active">Apis</li>
+        <li class="breadcrumb-item active"><a href="{% url 'home_page:api_list' %}">Apis</a></li>
     </ol>
 
     <div class="card mb-4">
@@ -19,6 +19,7 @@
                     <th>Url</th>
                     <th>Type</th>
                     <th>Created On</th>
+                    <th>U. Code</th>
                     <th>Action</th>
                 </tr>
                 </thead>
@@ -29,35 +30,27 @@
                     <th>Url</th>
                     <th>Type</th>
                     <th>Created On</th>
+                    <th>U. Code</th>
                     <th>Action</th>
                 </tr>
 
                 </tfoot>
                 <tbody>
-                <tr>
-                    <td>Tiger Nixon</td>
-                    <td>System Architect</td>
-                    <td>Edinburgh</td>
-                    <td>61</td>
-                    <td>2011/04/25</td>
-                    <td class="justify-content-center">
-                        <button class="btn btn-primary float-end mx-1">Edit</button>
-                        <button class="btn btn-success float-end  mx-1">View</button>
-                        <button class="btn btn-danger float-end  mx-1">Del</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Tiger Nixon</td>
-                    <td>System Architect</td>
-                    <td>Edinburgh</td>
-                    <td>61</td>
-                    <td>2011/04/25</td>
-                    <td class="justify-content-center">
-                        <button class="btn btn-primary float-end mx-1">Edit</button>
-                        <button class="btn btn-success float-end  mx-1">View</button>
-                        <button class="btn btn-danger float-end  mx-1">Del</button>
-                    </td>
-                </tr>
+                {% for obj in object_list %}
+                    <tr>
+                        <td>{{obj.name}}</td>
+                        <td>{{obj.category}}</td>
+                        <td>{{obj.api_url}}</td>
+                        <td>{{obj.api_type}}</td>
+                        <td>{{obj.created_at|date:"F d, Y"}}</td>
+                        <td>{{obj.unique_code}}</td>
+                        <td class="justify-content-center">
+                            <button class="btn btn-primary float-end mx-1">Edit</button>
+                            <button class="btn btn-success float-end  mx-1">View</button>
+                            <button class="btn btn-danger float-end  mx-1">Del</button>
+                        </td>
+                    </tr>
+                {% endfor %}
                 </tbody>
             </table>
         </div>
