--- a/templates/home/dashboard/dashboard-header.html
+++ b/templates/home/dashboard/dashboard-header.html
@@ -1,7 +1,7 @@
 <!--dashboard header nav-->
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
     <!-- Navbar Brand-->
-    <a class="navbar-brand ps-3" href="{% url 'home_page:dashboard' %}">Api Library</a>
+    <a class="navbar-brand ps-3" href="{% url 'home_page:home' %}">Api Library</a>
     <!-- Sidebar Toggle-->
     <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
             class="fas fa-bars"></i></button>
